[project]
name = "haven-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "laser-learning-environment>=2.0.1",
    "matplotlib>=3.9.3",
    "psutil>=6.1.0",
    "pyyaml>=6.0.2",
    "sacred>=0.8.7",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "setuptools>=75.6.0",
    "smac",
    "torch>=2.5.1",
]

[tool.uv.sources]
smac = { git = "https://github.com/oxwhirl/smac.git" }
